--- a/views/login.ejs
+++ b/views/login.ejs
@@ -7,4 +7,7 @@
 </form>
 <p>
   click <a href="/auth/register">here</a> to register
+  <br>
+  <br>
+  forgot password? click <a href="/auth/email-confirmation">here</a>
 </p>
