Update reset password form labels and input names

--- a/views/users/reset-password.ejs
+++ b/views/users/reset-password.ejs
@@ -1,10 +1,11 @@
 <body>
     <!-- input new password -->
     <form action="/auth/reset-password/<%= token %>" method="post">
-        <label for="password">New Password:</label>
+        <label for="password">Password:</label>
         <input type="password" id="password" name="password" required>
-        <label for="passwordConfirmation">Confirm New Password:</label>
-        <input type="password" id="passwordConfirmation" name="passwordConfirmation" required>
+    
+        <label for="confirmPassword">Confirm New Password:</label>
+        <input type="password" id="confirmPassword" name="confirmPassword" required>
         <button type="submit">Reset Password</button>
     </form>
 </body>
