--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,13 +1,22 @@
-<h2>This is the login page</h2>
+<h2>Login</h2>
+<form action="/auth/login" method="POST">
+    <div class="form-group">
+        <label for="email">Email address</label>
+        <input type="email" class="form-control" id="email" name="email" required>
+    </div>
+    <div class="form-group">
+        <label for="password">Password</label>
+        <input type="password" class="form-control" id="password" name="password" required>
+    </div>
+    <button type="submit" class="btn btn-primary">Login</button>
+    <!-- register page -->
+    <p>
+        Don't have an account? 
+        Click <a href="/auth/register">here</a> to register 
+    </p>
 
-<form action="/auth/login" method="post">
-  <input type="email" name="email" placeholder="email" required>
-  <input type="password" name="password" placeholder="Password" required>
-  <button type="submit">Login</button>
+    <!-- forgot password page -->
+    <p>
+        Forgot your password? 
+        Click <a href="/auth/email-confirmation">here</a> to reset your password
 </form>
-<p>
-  click <a href="/auth/register">here</a> to register
-  <br>
-  <br>
-  forgot password? click <a href="/auth/email-confirmation">here</a>
-</p>
