--- a/views/users/reset-password.ejs
+++ b/views/users/reset-password.ejs
@@ -1,11 +1,21 @@
-<body>
-    <!-- input new password -->
-    <form action="/auth/reset-password/<%= token %>" method="post">
-        <label for="password">Password:</label>
-        <input type="password" id="password" name="password" required>
-    
-        <label for="confirmPassword">Confirm New Password:</label>
-        <input type="password" id="confirmPassword" name="confirmPassword" required>
-        <button type="submit">Reset Password</button>
-    </form>
-</body>
+<div class="container">
+    <div class="row justify-content-center">
+        <div class="col-md-6">
+            <!-- input new password -->
+            <form action="/auth/reset-password/<%= token %>" method="post">
+                <div class="form-group">
+                    <label for="password">Password:</label>
+                    <input type="password" class="form-control" id="password" name="password" required>
+                </div>
+            
+                <div class="form-group">
+                    <label for="confirmPassword">Confirm New Password:</label>
+                    <input type="password" class="form-control" id="confirmPassword" name="confirmPassword" required>
+                </div>
+                
+                <button type="submit" class="btn btn-primary">Reset Password</button>
+            </form>
+        </div>
+    </div>
+</div>
+ 
