--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -1,7 +1,6 @@
-
 <div class="container">
     <h2>Dashboard</h2>
-    <p>Welcome, <%= user.name %>!</p>
+    <p>Welcome, <%= user.name.charAt(0).toUpperCase() + user.name.slice(1) %>!</p>
     <p>Your email is: <%= user.email %></p>
     <a href="/auth/logout" class="btn btn-primary">Logout</a>
 </div>
