--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,5 +1,5 @@
 <h2>Login</h2>
-<form action="/auth/login" method="POST">
+<form action="/users/login" method="POST">
     <div class="form-group">
         <label for="email">Email address</label>
         <input type="email" class="form-control" id="email" name="email" required>
@@ -12,11 +12,11 @@
     <!-- register page -->
     <p>
         Don't have an account? 
-        Click <a href="/auth/register">here</a> to register 
+        Click <a href="/users/register">here</a> to register 
     </p>
 
     <!-- forgot password page -->
     <p>
         Forgot your password? 
-        Click <a href="/auth/email-confirmation">here</a> to reset your password
+        Click <a href="/users/email-confirmation">here</a> to reset your password
 </form>
