--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,5 +1,5 @@
 <h2>Register</h2>
-<form action="/auth/register" method="POST">
+<form action="/users/register" method="POST">
     <div class="form-group">
         <label for="name">Name</label>
         <input type="text" class="form-control" id="name" name="name" required>
@@ -22,12 +22,12 @@
 </form>
 <p>
     Already have an account? 
-    Click <a href="/auth/login">here</a> to login
+    Click <a href="/users/login">here</a> to login
 </p>
 
 <p>
     Sign in with Google 
-    <a href="/auth/google">here</a>
+    <a href="/users/google">here</a>
     
 
 </p>
