--- a/views/users/reset-password.ejs
+++ b/views/users/reset-password.ejs
@@ -2,7 +2,7 @@
     <div class="row justify-content-center">
         <div class="col-md-6">
             <!-- input new password -->
-            <form action="/auth/reset-password/<%= token %>" method="post">
+            <form action="/users/reset-password/<%= token %>" method="post">
                 <div class="form-group">
                     <label for="password">Password:</label>
                     <input type="password" class="form-control" id="password" name="password" required>
