feat: Update callbackURL in passport.js and formFields in dashboard.ejs
The callbackURL in passport.js was updated to '/users/google/callback' instead of '/auth/google/callback' to ensure proper authentication with Google. Additionally, the formFields in dashboard.ejs were modified to include a new form for updating user information.

--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -1,7 +1,9 @@
 <div class="container">
     <h2>Dashboard</h2>
-    <p>Welcome, <%= user.name %>!</p>
-    <p>Your email is: <%= user.email %></p>
+    <h4>Namaste,
+        <strong class="text-danger"><%= user.name %></strong>
+    </h4>
+    <%- include('partials/_formFields', { url: `/users/${user.id}` }) %>
 
     <!-- Include the delete form partial and pass user data -->
     <%- include('partials/deleteForm', { url: `/users/${user.id}` }) %>
