--- a/views/partials/profileForm.ejs
+++ b/views/partials/profileForm.ejs
@@ -1,4 +1,3 @@
-<form action="/<%  %>" method="post" enctype="multipart/form-data">
-    <input type="file" name="file" />
-    <button type="submit">Upload</button>
+<form action="upload/" method="post" >
+    <input type="file" name="profile" class="filepond" />
   </form>
